#pragma once

namespace sle {

class Scene {
private:

public:

};

} // sle
