#pragma once

namespace sle {

class SystemManager {
private:

public:

};

} // sle
