@startuml
'https://plantuml.com/class-diagram

' ----------------------- ECS TYPES ------------------

object Utils {
    using EntityID = uint32_t
    constexpr int MAX_COMPONENTS = 32
    using ComponentMask = std::bitmask<MAX_COMPONENTS>
}

' ----------------------- SCENE ----------------------

class Scene {
    - EntityManager m_entityManager
    - ComponentManager m_componentManager
    - SystemManager m_systemManager
    - vector<Entity> m_entities
}


' ----------------------- ENTITY ---------------------

' An entity is just an id with some components associated with it
struct Entity {
    + uint32 id
    + bitmask components
}


' Entity Manager should keep track of valid Entity IDs, and be able to create new
' Entity instances.
class EntityManager {
    - uint32 m_entityCount
    - queue<Entity> m_unusedIDs

    + Entity createEntity()
    + void destroyEntity()
}

' ----------------------- COMPONENT ------------------

enum ComponentType {
    TEXTURE = 0,
    TRANSFORM = 1,
    ... = 2,
    ... = 4,
    ... = 8,
}

' A component is just a struct of some functionally related data
struct IComponent {
    + virtual ComponentType type() = 0
}

' Just some examples, there will be ofc way more
struct TransformComponent {
    - SDL_Rect rect
}

struct SpriteComponent {
    - Texture texture
}

class ComponentManager {
    - HashMap<Entity.id, Component.id> m_entityToTransformIndex
    - HashMap<Entity.id, Component.id> m_entityToSpriteIndex

    - HashMap<ComponentType, vector<IComponent>> m_componentArrays
}

' ----------------------- SYSTEM --------------------

' A system is some piece of logic, that applies to each entity each tick, so long as it
' has a specific combination of components associated with it.
class ISystem

class SystemManager {

}

' ----------------------- RELATIONS -----------------

Scene *-- Entity
Scene *-- EntityManager
Scene *-- ComponentManager
Scene *-- SystemManager



@enduml